--- a/tests/test_interface/dut_mio_sim.yaml
+++ b/tests/test_interface/dut_mio_sim.yaml
@@ -4,7 +4,7 @@ version : 2.0.0
 
 transfer_layer:
   - name     : USB
-    type     : SiUsb
+    type     : SiSim
 
 # Example of additional lab device transfer layers to be used with pyBAR
 #  - name     : Visa
