--- a/.travis.yml
+++ b/.travis.yml
@@ -27,6 +27,7 @@ before_install:
   - wget -O cocotb-master.zip https://github.com/potentialventures/cocotb/archive/master.zip 
   - unzip cocotb-master.zip
   - export COCOTB=$(pwd)/cocotb-master
+  - rm -f /home/travis/miniconda/envs/test-environment/lib/libreadline.so.6
 
 # Install pybar with needed packages
 install:
