--- a/pybar/dut_configuration_mio_gpac.yaml
+++ b/pybar/dut_configuration_mio_gpac.yaml
@@ -1,22 +1,23 @@
-
+# USBpix board
 USB:
-    bit_file       : "mio_gpac.bit"
-    board_id       : 
-    avoid_download : False
+    bit_file       : "mio_gpac.bit"  # Selecting FPGA firmware
+    board_id       : # Selecting USBpix board by ID
+    avoid_download : False  # Avoiding download of FPGA firmware if already initialized
 
-CMD:
-    OUTPUT_MODE : 0  # 0: positive edge (default), 2: Manchester code
-
+# Trigger
 TLU:
-    TRIGGER_MODE        : 0
-    TRIGGER_SELECT      : 0 # CCPD_TDC_FROM_TDC, TDC_IN_FROM_TDC, LEMO_TRIGGER_FROM_TDC, MONHIT
-    TRIGGER_INVERT      : 0
-    TRIGGER_VETO_SELECT : 255 # VETO_IN, FIFO_FULL
+    TRIGGER_MODE        : 0  # Selecting trigger mode: Use trigger inputs/trigger select (0), TLU no handshake (1), TLU simple handshake (2), TLU data handshake (3)
+    TRIGGER_SELECT      : 0  # Selecting trigger input: RX2 (TDC loop-through) (4), RX0 (2), MonHit/HitOR from Adapter Card (1), disabled (0)
+    TRIGGER_INVERT      : 0  # Inverting trigger invert
+    TRIGGER_VETO_SELECT : 255  # Selecting trigger veto: RX1, RX FIFO full (1), disabled (0)
 
+# TDC for high precision charge measurements
 TDC:
-    ENABLE               : 0
-    EN_WRITE_TIMESTAMP   : 0
-    EN_TRIGGER_DIST      : 0
-    EN_NO_WRITE_TRIG_ERR : 0
-    EN_INVERT_TDC        : 0
-    EN_INVERT_TRIGGER    : 0
+    EN_TRIGGER_DIST      : 0  # Measuring trigger to TDC delay with 640MHz clock
+    EN_NO_WRITE_TRIG_ERR : 0  # Writing TDC word only if valid trigger occurred
+    EN_INVERT_TDC        : 0  # Inverting TDC input
+    EN_INVERT_TRIGGER    : 0  # Inverting trigger input
+
+# FE-I4 command ouput
+CMD:
+    OUTPUT_MODE : 0  # Selecting command output mode: positive edge (0), negative edge (1), Manchester Code according to IEEE 802.3 (2), Manchester Code according to G.E. Thomas (3)
