BUG: seabas2: fix clocs

--- a/firmware/seabas2/src/top.ucf
+++ b/firmware/seabas2/src/top.ucf
@@ -24,8 +24,8 @@ NET "REFCLK_P[0]" LOC = C6;
 NET "REFCLK_N[0]" LOC = C7;
 NET "CMDDCI_P[0]" LOC = B7;
 NET "CMDDCI_N[0]" LOC = A7;
-NET "DOBOUT_P[0]" LOC = D8 | IOSTANDARD = LVDS_25;
-NET "DOBOUT_N[0]" LOC = C8 | IOSTANDARD = LVDS_25;
+NET "DOBOUT_P[0]" LOC = D8 | IOSTANDARD = LVDS_25 | DIFF_TERM = "TRUE";
+NET "DOBOUT_N[0]" LOC = C8 | IOSTANDARD = LVDS_25 | DIFF_TERM = "TRUE";
 #########################
 
 
@@ -34,8 +34,8 @@ NET "REFCLK_P[1]" LOC = A2;
 NET "REFCLK_N[1]" LOC = A3;
 NET "CMDDCI_P[1]" LOC = C4;
 NET "CMDDCI_N[1]" LOC = B4;
-NET "DOBOUT_P[1]" LOC = D5 | IOSTANDARD = LVDS_25;
-NET "DOBOUT_N[1]" LOC = D6 | IOSTANDARD = LVDS_25;
+NET "DOBOUT_P[1]" LOC = D5 | IOSTANDARD = LVDS_25 | DIFF_TERM = "TRUE";
+NET "DOBOUT_N[1]" LOC = D6 | IOSTANDARD = LVDS_25 | DIFF_TERM = "TRUE";
 #########################
 
 #########################
@@ -43,8 +43,8 @@ NET "REFCLK_P[2]" LOC = F5;
 NET "REFCLK_N[2]" LOC = F4;
 NET "CMDDCI_P[2]" LOC = F2;
 NET "CMDDCI_N[2]" LOC = G2;
-NET "DOBOUT_P[2]" LOC = B1 | IOSTANDARD = LVDS_25;
-NET "DOBOUT_N[2]" LOC = B2 | IOSTANDARD = LVDS_25;
+NET "DOBOUT_P[2]" LOC = B1 | IOSTANDARD = LVDS_25 | DIFF_TERM = "TRUE";
+NET "DOBOUT_N[2]" LOC = B2 | IOSTANDARD = LVDS_25 | DIFF_TERM = "TRUE";
 #########################
 
 #########################
@@ -52,8 +52,8 @@ NET "REFCLK_P[3]" LOC = C2;
 NET "REFCLK_N[3]" LOC = C3;
 NET "CMDDCI_P[3]" LOC = D1;
 NET "CMDDCI_N[3]" LOC = C1;
-NET "DOBOUT_P[3]" LOC = E2 | IOSTANDARD = LVDS_25;
-NET "DOBOUT_N[3]" LOC = E1 | IOSTANDARD = LVDS_25;
+NET "DOBOUT_P[3]" LOC = E2 | IOSTANDARD = LVDS_25 | DIFF_TERM = "TRUE";
+NET "DOBOUT_N[3]" LOC = E1 | IOSTANDARD = LVDS_25 | DIFF_TERM = "TRUE";
 #########################
 
 
