ENH: add i2c module

--- a/pybar/dut_lx9.yaml
+++ b/pybar/dut_lx9.yaml
@@ -28,3 +28,8 @@ hw_drivers:
     type      : fei4_rx
     interface : ETH
     base_addr : 0x8600
+    
+  - name      : I2C
+    type      : i2c
+    interface : inf
+    base_addr : 0x8800
