ENH: seabas2: add TLU + 4 x hitor

--- a/firmware/seabas2/src/top.ucf
+++ b/firmware/seabas2/src/top.ucf
@@ -15,6 +15,9 @@ TIMESPEC TS_FALSE_CLK_16_BUS_CLK = FROM "tn_CLK16" TO "TNM_BUS_CLK" TIG ;
 TIMESPEC TS_FALSE_BUS_CLK_CLK_16 = FROM "TNM_BUS_CLK" TO "tn_CLK16" TIG ;
 
 NET "CLK125" TNM_NET = "tn_CLK125";
+TIMESPEC TS_FALSE_CLK_125_CLK_40 = FROM "tn_CLK125" TO "tn_CLK_40" TIG ; # FIFO_FULL
+
+NET "CLK125" TNM_NET = "tn_CLK125";
 TIMESPEC TS_FALSE_CLK_16_CLK_125 = FROM "tn_CLK16" TO "tn_CLK125" TIG ;
 TIMESPEC TS_FALSE_CLK_125_CLK_16 = FROM "tn_CLK125" TO "tn_CLK16" TIG ;
 
@@ -196,3 +199,9 @@ NET "NIM_OUT[0]" SLEW = FAST;
 NET "NIM_OUT[1]" SLEW = FAST;
 NET "NIM_OUT[0]" DRIVE = 16;
 NET "NIM_OUT[1]" DRIVE = 16;
+
+NET "NIM_IN[0]" LOC = E16 ;
+NET "NIM_IN[1]" LOC = D15 ;
+NET "NIM_IN[2]" LOC = D13 ;
+NET "NIM_IN[3]" LOC = F14 ;
+
