ENH: support for flat ribbon cable ENH: adding support for CMOS signals over flat ribbon cable ENH: support for old SCAC ENH: enable AuxClk (10MHz)

--- a/firmware/mio/src/top_gpac.ucf
+++ b/firmware/mio/src/top_gpac.ucf
@@ -47,12 +47,6 @@ NET "RX_CLK" TNM_NET = "tn_RX_CLK";
 TIMESPEC TS_FALSE_RX_CLK_BUS_CLK = FROM "tn_RX_CLK" TO "tn_BUS_CLK" TIG ;
 TIMESPEC TS_FALSE_BUS_CLK_RX_CLK = FROM "tn_BUS_CLK" TO "tn_RX_CLK" TIG ;
 
-#NET "RX_CLK90" TNM_NET = "tn_RX_CLK90";
-#TIMESPEC "TS_RX_CLK90" = PERIOD "tn_RX_CLK90" 3.125 ns HIGH 50 %;
-#TIMESPEC TS_FALSE_RX_CLK90_BUS_CLK = FROM "tn_RX_CLK90" TO "tn_BUS_CLK" TIG ;
-#TIMESPEC TS_FALSE_BUS_CLK_RX_CLK90 = FROM "tn_BUS_CLK" TO "tn_RX_CLK90" TIG ;
-
-
 # LCLK (max 167 MHz PLL clock)
 #NET "LCLK_IN" TNM_NET = "TNM_LCLK_IN";
 #TIMESPEC "TS_LCLK_IN" = PERIOD "TNM_LCLK_IN" 6 ns HIGH 50 %;
@@ -457,9 +451,10 @@ NET "CCPD_SHIFT_LD"  LOC = C11; // CCPD_SHIFT_LD
 #NET "DOUT[16]" LOC = D8;
 #NET "DOUT[17]" LOC = B4;
 #NET "DOUT[18]" LOC = D9;
-NET "CMD_DATA" LOC = D9 | IOSTANDARD = LVCMOS33; // FE CMD
+NET "CMD_DATA" LOC = D9 | IOSTANDARD = LVCMOS33 | SLEW = FAST | DRIVE = 24; // FE Di
 #NET "DOUT[19]" LOC = C5;
-NET "CMD_CLK" LOC = C5 | IOSTANDARD = LVCMOS33; // FE CLK
+NET "REF_CLK" LOC = C5 | IOSTANDARD = LVCMOS33 | SLEW = FAST | DRIVE = 24; // FE RefClk
+
 
 # http://www.xilinx.com/support/answers/18095.html
 #NET "ADC_CLK_N"    LOC = A10 | IOSTANDARD = LVDS_25;
