--- a/firmware/mio/src/top.ucf
+++ b/firmware/mio/src/top.ucf
@@ -47,12 +47,6 @@ NET "RX_CLK" TNM_NET = "tn_RX_CLK";
 TIMESPEC TS_FALSE_RX_CLK_BUS_CLK = FROM "tn_RX_CLK" TO "tn_BUS_CLK" TIG ;
 TIMESPEC TS_FALSE_BUS_CLK_RX_CLK = FROM "tn_BUS_CLK" TO "tn_RX_CLK" TIG ;
 
-#NET "RX_CLK90" TNM_NET = "tn_RX_CLK90";
-#TIMESPEC "TS_RX_CLK90" = PERIOD "tn_RX_CLK90" 3.125 ns HIGH 50 %;
-#TIMESPEC TS_FALSE_RX_CLK90_BUS_CLK = FROM "tn_RX_CLK90" TO "tn_BUS_CLK" TIG ;
-#TIMESPEC TS_FALSE_BUS_CLK_RX_CLK90 = FROM "tn_BUS_CLK" TO "tn_RX_CLK90" TIG ;
-
-
 # LCLK (max 167 MHz PLL clock)
 #NET "LCLK_IN" TNM_NET = "TNM_LCLK_IN";
 #TIMESPEC "TS_LCLK_IN" = PERIOD "TNM_LCLK_IN" 6 ns HIGH 50 %;
@@ -416,10 +410,18 @@ NET "SRAM_IO[0]" LOC = D17;
 
 # ------ General purpose IOs --------------------------------------
 
-NET "CMD_CLK" IOSTANDARD = LVCMOS33;
-NET "CMD_CLK" LOC = A14;
+NET "REF_CLK" IOSTANDARD = LVCMOS33;
+NET "REF_CLK" LOC = A14;
+NET "REF_CLK" SLEW = FAST;
+NET "REF_CLK" DRIVE = 24;
 NET "CMD_DATA" IOSTANDARD = LVCMOS33;
 NET "CMD_DATA" LOC = A12;
+NET "CMD_DATA" SLEW = FAST;
+NET "CMD_DATA" DRIVE = 24;
+NET "AUX_CLK" IOSTANDARD = LVCMOS33;
+NET "AUX_CLK" LOC = A15;
+NET "AUX_CLK" SLEW = FAST;
+NET "AUX_CLK" DRIVE = 24;
 
 # FE data input
 # BIC only
@@ -434,23 +436,26 @@ NET "DOBOUT[1]" PULLDOWN;
 NET "DOBOUT[2]" LOC = C11;
 NET "DOBOUT[2]" IOSTANDARD = LVCMOS33;
 NET "DOBOUT[2]" PULLDOWN;
-# DO on SCC
+# DO on SCAC
 NET "DOBOUT[3]" LOC = A11;
 NET "DOBOUT[3]" IOSTANDARD = LVCMOS33;
 NET "DOBOUT[3]" PULLDOWN;
 
-# EN_VA1 on SCC, EN_VDD1 on BIC, Enables LVDS Transceiver on SCC
+# EN_VA1 on SCAC, EN_VDD1 on BIC
 NET "EN[0]" LOC = H6;
 NET "EN[0]" IOSTANDARD = LVCMOS33;
-# EN_VA2 on SCC, EN_VDD2 on BIC
+# EN_VA2 on SCAC, EN_VDD2 on BIC
 NET "EN[1]" LOC = G5;
 NET "EN[1]" IOSTANDARD = LVCMOS33;
-# EN_VD2 on SCC, EN_VDD3 on BIC
+# EN_VD2 on SCAC, EN_VDD3 on BIC
 NET "EN[2]" LOC = C1;
 NET "EN[2]" IOSTANDARD = LVCMOS33;
-# EN_VD1 on SCC, EN_VDD4 on BIC
+# EN_VD1 on SCAC, EN_VDD4 on BIC
 NET "EN[3]" LOC = F5;
 NET "EN[3]" IOSTANDARD = LVCMOS33;
+# EN_VPLL on old SCAC
+NET "EN_VPLL" LOC=F4;
+NET "EN_VPLL" IOSTANDARD = LVCMOS33;
 
 # Over Current Protection (BIC only)
 NET "OC[0]" LOC = F2;
@@ -462,19 +467,61 @@ NET "OC[2]" IOSTANDARD = LVCMOS33;
 NET "OC[3]" LOC = D2;
 NET "OC[3]" IOSTANDARD = LVCMOS33;
 
-# Select (SEL) LED (BIC only)
+# Select (SEL) LED (BIC only) and reset lines (SCAC only)
+# RD2Bar on SCAC
 NET "SEL[0]" LOC = B14;
 NET "SEL[0]" IOSTANDARD = LVCMOS33;
+# RD1Bar on SCAC
 NET "SEL[1]" LOC = D13;
 NET "SEL[1]" IOSTANDARD = LVCMOS33;
+# RABar on SCAC
 NET "SEL[2]" LOC = C12;
 NET "SEL[2]" IOSTANDARD = LVCMOS33;
+# not used on SCAC
 NET "SEL[3]" LOC = B15;
 NET "SEL[3]" IOSTANDARD = LVCMOS33;
 
 # Hit-OR input
 NET "MONHIT" LOC = E13;
 NET "MONHIT" IOSTANDARD = LVCMOS33;
+
+# other IOs for SCAC
+NET "IOMXSEL[0]" LOC = E11;
+NET "IOMXSEL[0]" IOSTANDARD = LVCMOS33;
+NET "IOMXSEL[1]" LOC = B9;
+NET "IOMXSEL[1]" IOSTANDARD = LVCMOS33;
+NET "IOMXSEL[2]" LOC = E10;
+NET "IOMXSEL[2]" IOSTANDARD = LVCMOS33;
+
+NET "IOMXIN[0]" LOC = A9;
+NET "IOMXIN[0]" IOSTANDARD = LVCMOS33;
+NET "IOMXIN[1]" LOC = E12;
+NET "IOMXIN[1]" IOSTANDARD = LVCMOS33;
+NET "IOMXIN[2]" LOC = D11;
+NET "IOMXIN[2]" IOSTANDARD = LVCMOS33;
+NET "IOMXIN[3]" LOC = F11;
+NET "IOMXIN[3]" IOSTANDARD = LVCMOS33;
+
+NET "IOMXOUT[0]" LOC = A7;
+NET "IOMXOUT[0]" IOSTANDARD = LVCMOS33;
+NET "IOMXOUT[1]" LOC = D12;
+NET "IOMXOUT[1]" IOSTANDARD = LVCMOS33;
+NET "IOMXOUT[2]" LOC = A8;
+NET "IOMXOUT[2]" IOSTANDARD = LVCMOS33;
+
+NET "CMD_ALT_PLS" LOC = A5;
+NET "CMD_ALT_PLS" IOSTANDARD = LVCMOS33;
+NET "CMD_EXT_TRIGGER" LOC = F10;
+NET "CMD_EXT_TRIGGER" IOSTANDARD = LVCMOS33;
+NET "SEL_CMD" LOC = B6;
+NET "SEL_CMD" IOSTANDARD = LVCMOS33;
+NET "SEL_ALT_BUS" LOC = A4;
+NET "SEL_ALT_BUS" IOSTANDARD = LVCMOS33;
+
+NET "REG_AB_DAC_LD" LOC = A3;
+NET "REG_AB_DAC_LD" IOSTANDARD = LVCMOS33;
+NET "REG_AB_STB_LD" LOC = C7;
+NET "REG_AB_STB_LD" IOSTANDARD = LVCMOS33;
 
 # input of data to clock phase alignment
 #NET "*DOBOUT_0_IBUF" MAXSKEW = 500 pS ;
