--- a/pybar/dut_configuration_nexys4.yaml
+++ b/pybar/dut_configuration_nexys4.yaml
@@ -1,9 +1,16 @@
-# nexys4 board
+# Nexys4 board
 ETH:
     ip : "192.168.10.16"
     udp_port : 4660
     tcp_port : 24
     tcp_connection : True
+
+# Trigger
+TLU:
+    TRIGGER_MODE        : 0  # Selecting trigger mode: Use trigger inputs/trigger select (0), TLU no handshake (1), TLU simple handshake (2), TLU data handshake (3)
+    TRIGGER_SELECT      : 0  # Selecting trigger input: IO_L1P_T0_AD0P_15 (TDC loop-through) (2), IO_L14N_T2_SRCC_15 (1), disabled (0)
+    TRIGGER_INVERT      : 0  # Inverting trigger input: IO_L1P_T0_AD0P_15 (TDC loop-through) (2), IO_L14N_T2_SRCC_15 (1), disabled (0)
+    TRIGGER_VETO_SELECT : 255  # Selecting trigger veto: RX FIFO full (1), disabled (0)
 
 # FE-I4 command ouput
 CMD:
