MAINT: fix ucf file

--- a/firmware/mio/src/top.ucf
+++ b/firmware/mio/src/top.ucf
@@ -43,8 +43,8 @@ TIMESPEC TS_FALSE_BUS_CLK_DATA_CLK = FROM "tn_BUS_CLK" TO "tn_DATA_CLK" TIG;
 
 #NET "RX_CLK" TNM_NET = "tn_RX_CLK";
 #TIMESPEC "TS_RX_CLK" = PERIOD "tn_RX_CLK" 6.250 ns HIGH 50 %;
-#TIMESPEC TS_FALSE_RX_CLK_BUS_CLK = FROM "tn_RX_CLK" TO "tn_BUS_CLK" TIG;
-#TIMESPEC TS_FALSE_BUS_CLK_RX_CLK = FROM "tn_BUS_CLK" TO "tn_RX_CLK" TIG;
+TIMESPEC TS_FALSE_RX_CLK_BUS_CLK = FROM "tn_RX_CLK" TO "tn_BUS_CLK" TIG;
+TIMESPEC TS_FALSE_BUS_CLK_RX_CLK = FROM "tn_BUS_CLK" TO "tn_RX_CLK" TIG;
 
 NET "RX_CLK2X" TNM_NET = "tn_RX2X_CLK";
 #TIMESPEC "TS_RX_CLK2X" = PERIOD "tn_RX2X_CLK" 3.125 ns HIGH 50 %;
