MAINT: also update GPAC ucf

--- a/firmware/mio/src/top_gpac.ucf
+++ b/firmware/mio/src/top_gpac.ucf
@@ -27,25 +27,29 @@
 
 # FCLK (48 MHz)
 NET "FCLK_IN" TNM_NET = "TNM_FCLK_IN";
-#TIMESPEC TS_FCLK_IN = PERIOD "TNM_FCLK_IN" 20.833 ns HIGH 50 %;
-TIMESPEC TS_FCLK_IN = PERIOD "TNM_FCLK_IN" 20.8 ns HIGH 50 %;
+TIMESPEC TS_FCLK_IN = PERIOD "TNM_FCLK_IN" 20.830 ns HIGH 50 %;
 
 NET "BUS_CLK" TNM_NET = "tn_BUS_CLK";
 
 NET "CLK_40" TNM_NET = "tn_CLK_40";
-TIMESPEC TS_FALSE_CLK_40_BUS_CLK = FROM "tn_CLK_40" TO "tn_BUS_CLK" TIG ;
-TIMESPEC TS_FALSE_BUS_CLK_CLK_40 = FROM "tn_BUS_CLK" TO "tn_CLK_40" TIG ;
+#TIMESPEC TS_CLK_40 = PERIOD "tn_CLK_40" 25.000 ns HIGH 50 %;
+TIMESPEC TS_FALSE_CLK_40_BUS_CLK = FROM "tn_CLK_40" TO "tn_BUS_CLK" TIG;
+TIMESPEC TS_FALSE_BUS_CLK_CLK_40 = FROM "tn_BUS_CLK" TO "tn_CLK_40" TIG;
 
 NET "DATA_CLK" TNM_NET = "tn_DATA_CLK";
-#TIMESPEC TS_FCLK_IN = PERIOD "tn_DATA_CLK" 3.125 ns HIGH 50 %;
-#TIMESPEC TS_DATA_CLK = PERIOD "tn_DATA_CLK" 31.25 ns HIGH 50 %;
-TIMESPEC TS_FALSE_DATA_CLK_BUS_CLK = FROM "tn_DATA_CLK" TO "tn_BUS_CLK" TIG ;
-TIMESPEC TS_FALSE_BUS_CLK_DATA_CLK = FROM "tn_BUS_CLK" TO "tn_DATA_CLK" TIG ;
+#TIMESPEC TS_DATA_CLK = PERIOD "tn_DATA_CLK" 62.500 ns HIGH 50 %;
+TIMESPEC TS_FALSE_DATA_CLK_BUS_CLK = FROM "tn_DATA_CLK" TO "tn_BUS_CLK" TIG;
+TIMESPEC TS_FALSE_BUS_CLK_DATA_CLK = FROM "tn_BUS_CLK" TO "tn_DATA_CLK" TIG;
 
-NET "RX_CLK" TNM_NET = "tn_RX_CLK";
-#TIMESPEC "TS_RX_CLK" = PERIOD "tn_RX_CLK" 3.125 ns HIGH 50 %;
-TIMESPEC TS_FALSE_RX_CLK_BUS_CLK = FROM "tn_RX_CLK" TO "tn_BUS_CLK" TIG ;
-TIMESPEC TS_FALSE_BUS_CLK_RX_CLK = FROM "tn_BUS_CLK" TO "tn_RX_CLK" TIG ;
+#NET "RX_CLK" TNM_NET = "tn_RX_CLK";
+#TIMESPEC "TS_RX_CLK" = PERIOD "tn_RX_CLK" 6.250 ns HIGH 50 %;
+TIMESPEC TS_FALSE_RX_CLK_BUS_CLK = FROM "tn_RX_CLK" TO "tn_BUS_CLK" TIG;
+TIMESPEC TS_FALSE_BUS_CLK_RX_CLK = FROM "tn_BUS_CLK" TO "tn_RX_CLK" TIG;
+
+NET "RX_CLK2X" TNM_NET = "tn_RX2X_CLK";
+#TIMESPEC "TS_RX_CLK2X" = PERIOD "tn_RX2X_CLK" 3.125 ns HIGH 50 %;
+TIMESPEC TS_FALSE_RX_CLK_BUS_CLK = FROM "tn_RX2X_CLK" TO "tn_BUS_CLK" TIG;
+TIMESPEC TS_FALSE_BUS_CLK_RX_CLK = FROM "tn_BUS_CLK" TO "tn_RX2X_CLK" TIG;
 
 # LCLK (max 167 MHz PLL clock)
 #NET "LCLK_IN" TNM_NET = "TNM_LCLK_IN";
