--- a/pybar/configuration.yaml
+++ b/pybar/configuration.yaml
@@ -10,8 +10,12 @@ module_id : module_test  # module identifier / name, sub-folder with given name 
 
 # *** global run configuration ***
 #
-#run_conf:
+run_conf:
 #    send_data : 'tcp://127.0.0.1:5678'
+    send_error :
+        email_host: 'mail.gmx.net'  # outgoing mail server
+        email_to: ["pohl@physik.uni-bonn.de", "janssen@physik.uni-bonn.de"]  # the Email adresses the status emails are send to
+        email_account: ['mr_beam@gmx.de', 'pyBARreporter1']  # email account name and password used to send email
 #    comment : ''
 #    reset_rx_on_error : False
 #
