--- a/pybar/dut_mio.yaml
+++ b/pybar/dut_mio.yaml
@@ -5,6 +5,14 @@ version : 2.0.0
 transfer_layer:
   - name     : USB
     type     : SiUsb3
+    
+  - name     : Visa
+    type     : Visa
+    init     :
+        resource_name : ASRLCOM6
+        read_termination : "\r"
+        baud_rate : 9600
+        backend : "@py"
 # Example of additional lab devices to be used by pyBAR
 #  - name     : VisaWindows
 #    type     : Visa
@@ -31,6 +39,12 @@ hw_drivers:
 #    interface : VisaLinux
 #    init      :
 #        device : Keithley 2400
+
+  - name      : Sourcemeter
+    type      : scpi
+    interface : Visa
+    init      :
+        device : Keithley 2410
 
   - name      : cmd
     type      : cmd_seq
