ENH: adding TLU to bit file

--- a/pybar/dut_seabas2.yaml
+++ b/pybar/dut_seabas2.yaml
@@ -50,10 +50,10 @@ hw_drivers:
     interface : ETH
     base_addr : 0x8800
 
-#  - name      : TLU
-#    type      : tlu
-#    interface : ETH
-#    base_addr : 0x8200
+  - name      : TLU
+    type      : tlu
+    interface : ETH
+    base_addr : 0x8200
 
 registers:
   - name        : ENABLE_CHANNEL
