--- a/pybar/configuration.yaml
+++ b/pybar/configuration.yaml
@@ -15,7 +15,7 @@ run_conf:
     send_error :
         email_host: 'mail.gmx.net'  # outgoing mail server
         email_to: ["pohl@physik.uni-bonn.de", "janssen@physik.uni-bonn.de"]  # the Email adresses the status emails are send to
-        email_account: ['mr_beam@gmx.de', 'pyBARreporter1']  # email account name and password used to send email
+        email_account: ['mr_beam@gmx.de']  # email account name and password used to send email
 #    comment : ''
 #    reset_rx_on_error : False
 #
