--- a/pybar/dut_mio.yaml
+++ b/pybar/dut_mio.yaml
@@ -6,13 +6,13 @@ transfer_layer:
   - name     : USB
     type     : SiUsb3
     
-  - name     : Visa
-    type     : Visa
-    init     :
-        resource_name : ASRLCOM6
-        read_termination : "\r"
-        baud_rate : 9600
-        backend : "@py"
+#  - name     : Visa
+#    type     : Visa
+#    init     :
+#        resource_name : ASRLCOM6
+#        read_termination : "\r"
+#        baud_rate : 9600
+#        backend : "@py"
 # Example of additional lab devices to be used by pyBAR
 #  - name     : VisaWindows
 #    type     : Visa
@@ -40,11 +40,11 @@ hw_drivers:
 #    init      :
 #        device : Keithley 2400
 
-  - name      : Sourcemeter
-    type      : scpi
-    interface : Visa
-    init      :
-        device : Keithley 2410
+#  - name      : Sourcemeter
+#    type      : scpi
+#    interface : Visa
+#    init      :
+#        device : Keithley 2410
 
   - name      : cmd
     type      : cmd_seq
@@ -111,6 +111,11 @@ hw_drivers:
     type      : gpio
     interface : USB
     base_addr : 0x18900
+    
+  - name      : gpio_disable
+    type      : gpio
+    interface : USB
+    base_addr : 0x18A00
 
   - name      : POWER
     type      : FEI4QuadModuleAdapterCard
@@ -159,5 +164,35 @@ registers:
         size    : 1
         offset  : 1
       - name    : EN_VA1
+        size    : 1
+        offset  : 0
+        
+  - name        : DISABLE_CHANNEL
+    type        : StdRegister
+    hw_driver   : gpio_disable
+    size        : 8
+    fields:
+      - name    : DIS_CH8
+        size    : 1
+        offset  : 7
+      - name    : DIS_CH7
+        size    : 1
+        offset  : 6
+      - name    : DIS_CH6
+        size    : 1
+        offset  : 5
+      - name    : DIS_CH5
+        size    : 1
+        offset  : 4
+      - name    : DIS_CH4
+        size    : 1
+        offset  : 3
+      - name    : DIS_CH3
+        size    : 1
+        offset  : 2
+      - name    : DIS_CH2
+        size    : 1
+        offset  : 1
+      - name    : DIS_CH1
         size    : 1
         offset  : 0
