MAINT: use timeout parameter

--- a/tests/test_interface/dut_mio_sim.yaml
+++ b/tests/test_interface/dut_mio_sim.yaml
@@ -5,6 +5,7 @@ version : 2.0.0
 transfer_layer:
   - name     : USB
     type     : SiSim
+    timeout  : 180
 
 # Example of additional lab device transfer layers to be used with pyBAR
 #  - name     : Visa
