MAINT: comment parameters which will be default anyway

--- a/firmware/mio/cosim/Makefile
+++ b/firmware/mio/cosim/Makefile
@@ -7,8 +7,8 @@
 
 PWD=$(shell pwd)
 
-SIMULATION_HOST?=localhost
-SIMULATION_PORT?=12345
+#SIMULATION_HOST?=localhost
+#SIMULATION_PORT?=12345
 SIMULATION_BUS?=basil.utils.sim.SiLibUsbBusDriver
 SIMULATION_END_ON_DISCONNECT?=1
 
