REG: fix empty export

--- a/firmware/mio/cosim/Makefile
+++ b/firmware/mio/cosim/Makefile
@@ -12,8 +12,8 @@ PWD=$(shell pwd)
 SIMULATION_BUS?=basil.utils.sim.SiLibUsbBusDriver
 SIMULATION_END_ON_DISCONNECT?=1
 
-export SIMULATION_HOST
-export SIMULATION_PORT
+#export SIMULATION_HOST
+#export SIMULATION_PORT
 export SIMULATION_BUS
 export SIMULATION_END_ON_DISCONNECT
 
