--- a/.travis.yml
+++ b/.travis.yml
@@ -32,8 +32,8 @@ before_install:
 # Install pybar with needed packages
 install:
   - pip install https://github.com/walac/pyusb/archive/master.zip
-  - pip install https://silab-redmine.physik.uni-bonn.de/attachments/download/800/pySiLibUSB-2.0.5.tar.gz
-  - if [ "$TRAVIS_BRANCH" == "master" ]; then pip install -e "git+https://github.com/SiLab-Bonn/basil.git@master#egg=basil&subdirectory=host"; fi
+  - pip install https://silab-redmine.physik.uni-bonn.de/attachments/download/818/pySiLibUSB-2.0.6.tar.gz
+  - if [ "$TRAVIS_BRANCH" == "master" ]; then pip install -e "git+https://github.com/SiLab-Bonn/basil.git@development#egg=basil&subdirectory=host"; fi
   - if [ "$TRAVIS_BRANCH" == "development" ]; then pip install -e "git+https://github.com/SiLab-Bonn/basil.git@development#egg=basil&subdirectory=host"; fi
   - sudo apt-get install -qq iverilog-daily
 #  Build iverilog from source
