--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
-basil_daq==2.1.2
+# Core functionality
+basil_daq>=2.1.2
 bitarray>=0.8.1
 cython
 matplotlib
@@ -8,3 +9,16 @@ progressbar-latest>=2.4
 tables
 pyyaml
 scipy
+# Additional functionality (lab devices, tests, Online Monitor)
+pyvisa
+pyvisa-py
+pyqtgraph
+mock
+sphinx
+pyserial
+nose
+pyzmq 
+  
+ 
+ 
+ 
