--- a/.travis.yml
+++ b/.travis.yml
@@ -32,7 +32,7 @@ before_install:
 # Install pybar with needed packages
 install:
   - pip install https://github.com/walac/pyusb/archive/master.zip
-  - pip install https://silab-redmine.physik.uni-bonn.de/attachments/download/818/pySiLibUSB-2.0.6.tar.gz
+  - pip install pySiLibUSB
   - if [ "$TRAVIS_BRANCH" == "master" ]; then pip install git+https://github.com/SiLab-Bonn/basil.git@v2.1.2; fi
   - if [ "$TRAVIS_BRANCH" == "development" ]; then pip install git+https://github.com/SiLab-Bonn/basil.git@v2.1.2; fi
   - sudo apt-get install -qq iverilog-daily
