MAINT: adding vitables, mock and sphinx installed via conda

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
 # Core functionality
-basil_daq>=2.1.2   # readout framework pyBAR is built on
-pySiLibUSB  # USB driver for USBpix system
+basil_daq>=2.1.2 # readout framework pyBAR is built on
+pySiLibUSB # support for SiLab USB devices
 bitarray>=0.8.1
 cython
 matplotlib
@@ -12,15 +12,12 @@ pyyaml
 scipy
 
 # Additional functionality (lab devices, unit tests, Online Monitor)
-pyvisa
-pyvisa-py
-pyserial
-pyqtgraph
-mock
-sphinx
-nose
-pyzmq 
-  
- 
- 
- 
+pyvisa # interface to lab devices
+pyvisa-py # interface to lab devices
+pyserial # serial port
+pyqtgraph # monitor
+mock # unit tests
+sphinx # for vitables
+vitables # data viewer
+nose # unit tests
+pyzmq # monitor
