--- a/pybar/dut_configuration_mio.yaml
+++ b/pybar/dut_configuration_mio.yaml
@@ -13,6 +13,7 @@ TLU:
 
 # TDC for high precision charge measurements
 TDC:
+    EN_WRITE_TIMESTAMP   : 0  # Writing trigger timestamp
     EN_TRIGGER_DIST      : 0  # Measuring trigger to TDC delay with 640MHz clock
     EN_NO_WRITE_TRIG_ERR : 0  # Writing TDC word only if valid trigger occurred
     EN_INVERT_TDC        : 0  # Inverting TDC input
