ENH: output of TDC on P9[11]

--- a/firmware/mio/src/top.ucf
+++ b/firmware/mio/src/top.ucf
@@ -187,28 +187,28 @@ NET "LED[0]" LOC = P13;
 #NET "FPGA_SPARE_1"      LOC=C16    |   IOSTANDARD = LVCMOS33;
 #NET "FPGA_SPARE_2"      LOC=K6     |   IOSTANDARD = LVCMOS33;
 
-#NET "MULTI_IO[10]" LOC = H5;
-#NET "MULTI_IO[10]" IOSTANDARD = LVCMOS33;
-#NET "MULTI_IO[9]" LOC = N5;
-#NET "MULTI_IO[9]" IOSTANDARD = LVCMOS33;
-#NET "MULTI_IO[8]" LOC = L6;
-#NET "MULTI_IO[8]" IOSTANDARD = LVCMOS33;
-#NET "MULTI_IO[7]" LOC = L3;
-#NET "MULTI_IO[7]" IOSTANDARD = LVCMOS33;
-#NET "MULTI_IO[6]" LOC = L4;
-#NET "MULTI_IO[6]" IOSTANDARD = LVCMOS33;
-#NET "MULTI_IO[5]" LOC = L2;
-#NET "MULTI_IO[5]" IOSTANDARD = LVCMOS33;
-#NET "MULTI_IO[4]" LOC = L1;
-#NET "MULTI_IO[4]" IOSTANDARD = LVCMOS33;
-#NET "MULTI_IO[3]" LOC = K5;
-#NET "MULTI_IO[3]" IOSTANDARD = LVCMOS33;
-#NET "MULTI_IO[2]" LOC = K4;
-#NET "MULTI_IO[2]" IOSTANDARD = LVCMOS33;
-#NET "MULTI_IO[1]" LOC = K1;
-#NET "MULTI_IO[1]" IOSTANDARD = LVCMOS33;
-#NET "MULTI_IO[0]" LOC = K2;
-#NET "MULTI_IO[0]" IOSTANDARD = LVCMOS33;
+NET "MULTI_IO[10]" LOC = H5;
+NET "MULTI_IO[10]" IOSTANDARD = LVCMOS33;
+NET "MULTI_IO[9]" LOC = N5;
+NET "MULTI_IO[9]" IOSTANDARD = LVCMOS33;
+NET "MULTI_IO[8]" LOC = L6;
+NET "MULTI_IO[8]" IOSTANDARD = LVCMOS33;
+NET "MULTI_IO[7]" LOC = L3;
+NET "MULTI_IO[7]" IOSTANDARD = LVCMOS33;
+NET "MULTI_IO[6]" LOC = L4;
+NET "MULTI_IO[6]" IOSTANDARD = LVCMOS33;
+NET "MULTI_IO[5]" LOC = L2;
+NET "MULTI_IO[5]" IOSTANDARD = LVCMOS33;
+NET "MULTI_IO[4]" LOC = L1;
+NET "MULTI_IO[4]" IOSTANDARD = LVCMOS33;
+NET "MULTI_IO[3]" LOC = K5;
+NET "MULTI_IO[3]" IOSTANDARD = LVCMOS33;
+NET "MULTI_IO[2]" LOC = K4;
+NET "MULTI_IO[2]" IOSTANDARD = LVCMOS33;
+NET "MULTI_IO[1]" LOC = K1;
+NET "MULTI_IO[1]" IOSTANDARD = LVCMOS33;
+NET "MULTI_IO[0]" LOC = K2;
+NET "MULTI_IO[0]" IOSTANDARD = LVCMOS33;
 
 # fix for USBpix cards below hardware version 1.04 which have I2C fix
 NET "SDA" LOC = D10 | IOSTANDARD = LVCMOS33 | FLOAT;
