--- a/pybar/configuration.yaml
+++ b/pybar/configuration.yaml
@@ -10,14 +10,14 @@ module_id : module_test  # module identifier / name, sub-folder with given name 
 
 # *** configuration ***
 #send_data : 'tcp://127.0.0.1:5678'  # to allow incoming connections on all interfaces use 0.0.0.0
-send_message :
-    status: ['CRASHED', 'ABORTED', 'STOPPED', 'FINISHED']  # run status that triggers emails
-    subject_prefix: "pyBAR run report: "
-    smtp_server: 'smtp.alert.com'  # outgoing SMTP mail server
-    user: 'my.email@alert.com'  # usually from_addr
-    password: 'my_secret_token'  # the password
-    from_addr: 'my.email@alert.com'  # email address of the sender
-    to_addrs: ["pohl@physik.uni-bonn.de", "janssen@physik.uni-bonn.de"]  # list of email addresses that will be notified
+#send_message :
+#    status: ['CRASHED', 'ABORTED', 'STOPPED', 'FINISHED']  # run status that triggers emails
+#    subject_prefix: "pyBAR run report: "
+#    smtp_server: 'smtp.alert.com'  # outgoing SMTP mail server
+#    user: 'my.email@alert.com'  # usually from_addr
+#    password: 'my_secret_token'  # the password
+#    from_addr: 'my.email@alert.com'  # email address of the sender
+#    to_addrs: ["pohl@physik.uni-bonn.de", "janssen@physik.uni-bonn.de"]  # list of email addresses that will be notified
 
 # *** run configuration ***
 #run_conf:
