--- a/appveyor.yml
+++ b/appveyor.yml
@@ -17,7 +17,8 @@ install:
   # Miniconda setup + necessary external packages
   - set PATH=C:\Miniconda;C:\Miniconda\Scripts;%PATH%  # miniconda is already installed on appveyor: https://github.com/appveyor/ci/issues/359
   - conda install --yes numpy cython pytables scipy matplotlib pandas pyserial bitarray nose pyzmq pyyaml pip pywin32
-  - pip install progressbar-latest pyvisa pyvisa-py pyqtgraph mock sphinx
+  - pip install progressbar-latest pyvisa pyvisa-py mock sphinx
+  - pip install https://github.com/SiLab-Bonn/pyqtgraph/archive/develop.zip  # pyqtgraph is not working with numpy 1.10 right now, install our fixed fork instead
   - pip install https://github.com/uvemas/ViTables/archive/v2.1.zip
   - pip install https://github.com/walac/pyusb/archive/master.zip
   - conda info -a
