--- a/pybar/configuration.yaml
+++ b/pybar/configuration.yaml
@@ -3,7 +3,7 @@ working_dir :  # Module data will be written to this path. If not given, use pat
 dut : dut_mio.yaml  # DUT hardware configuration (.yaml). Change to dut_mio_gpac.yaml for GPAC support.
 dut_configuration : dut_configuration_mio.yaml  # DUT init configuration (.yaml). Change to dut_configuration_mio_gpac.yaml for GPAC support.
 
-number_of_fes:  4 # Number of FEs to be readout, if not given, number of FEs is 1
+number_of_fes:  1 # Number of FEs to be readout, if not given, number of FEs is 1
 fe_configuration :  # FE configuration file, text (.cfg) or HDF5 (.h5) file. If not given, latest valid configuration (run status FINISHED) will be taken. If a number is given, configuration from run with specified number will be taken.
 multiple_fes_configuration: 
     1:  # Always first channel in Burn-In Card
@@ -21,10 +21,10 @@ multiple_chip_address:
     2:                                     # Quad1
     3:                                     # Quad1
     4:                                     # Quad1
-    5: 5                                    # Quad2
-    6: 6                                    # Quad2
-    7: 0                                    # Quad2
-    8: 4                                    # Quad2
+    5:                                     # Quad2
+    6:                                     # Quad2
+    7:                                     # Quad2
+    8:                                     # Quad2
 module_id : module_test  # module identifier / name, sub-folder with given name will be created inside working_dir
 #merging_factor: 2
 
