--- a/pybar/dut_mio.yaml
+++ b/pybar/dut_mio.yaml
@@ -7,15 +7,25 @@ transfer_layer:
     type     : SiUsb
 
 # Example of additional lab device transfer layers to be used with pyBAR
+#
 #  - name     : Visa
 #    type     : Visa
 #    init     :
-#        resource_name : ASRLCOM15::INSTR  # Linux: ASRL/dev/ttyUSB0
+#        resource_name : ASRLCOM15::INSTR # Windows
+#        resource_name : ASRL/dev/ttyUSB0 # Linux
 #        backend : "@py"
+#
+#  - name     : Serial
+#    type     : Serial
+#    init     :
+#        port     : /dev/ttyUSB0 # Linux
+#        read_termination : "\r"
+#        baudrate : 19200
 
 hw_drivers:
   - name      : ADAPTER_CARD
-    type      : FEI4AdapterCard # FEI4QuadModuleAdapterCard
+    type      : FEI4AdapterCard
+#    type      : FEI4QuadModuleAdapterCard
     interface : USB
     base_addr : 0x0
 
@@ -24,7 +34,8 @@ hw_drivers:
     interface : USB
     base_addr : 0x18300
 
-# Uncomment for FEI4QuadModuleAdapterCard
+# Uncomment to enable additional channels on the FEI4 Quad Module Adapter Card
+#
 #  - name      : CH3
 #    type      : fei4_rx
 #    interface : USB
@@ -41,16 +52,20 @@ hw_drivers:
 #    base_addr : 0x18600
 
 # Example of additional lab devices to be used with pyBAR
+#
 #  - name      : PowerSupply
 #    type      : scpi
 #    interface : Visa
 #    init      :
 #        device : TTi QL335TP
+#
 #  - name      : Multimeter
 #    type      : scpi
-#    interface : Visa
+#    interface : Visa # GPIB
+#    interface : Serial # Serial Port
 #    init      :
 #        device : Keithley 2400
+#
 #  - name      : Pulser
 #    type      : scpi
 #    interface : Visa
